added semantic tags to carouselSteps

--- a/_factory_specials_carouselSteps.html
+++ b/_factory_specials_carouselSteps.html
@@ -38,16 +38,21 @@
                             <div class="glide__track" data-glide-el="track">
                                 <ul class="glide__slides">
                                     <li class="glide__slide">
-                                        <div class="pd-specials-carouselSteps-slide">
+                                        <article class="pd-specials-carouselSteps-slide">
                                             <div class="pd-specials-carouselSteps-slide-left">
-                                                <img src="images/uploads/step-1.png" alt="image of software step 1" width="400" height="400">
+                                                <picture>
+                                                    <source srcset="/images/uploads/step-1.webp" type="image/webp">
+                                                    <img src="images/uploads/step-1.png" alt="image of software step 1" width="400" height="400" loading="lazy">
+                                                </picture>
                                             </div>
                                             <div class="pd-specials-carouselSteps-slide-right">
                                                 <div class="pd-specials-carouselSteps-right-inner">
-                                                    <h3>Step 1</h3>
-                                                    <div class="pd-specials-carouselSteps-inner-headline">
-                                                        <p><strong>Phasellus sit amet felis lacus. Sed eget velit est. </strong></p>
-                                                    </div>
+                                                    <header>
+                                                        <h3>Step 1</h3>
+                                                        <div class="pd-specials-carouselSteps-inner-headline">
+                                                            <p><strong>Phasellus sit amet felis lacus. Sed eget velit est. </strong></p>
+                                                        </div>
+                                                    </header>
                                                     <div class="pd-specials-carouselSteps-inner-para">
                                                         <p>Donec at mauris nunc. Sed imperdiet tincidunt mi, vel placerat urna efficitur non. Vestibulum ultrices magna sit amet odio interdum, sit amet semper elit commodo.</p>
                                                     </div>
@@ -60,19 +65,24 @@
                                                     </ul>
                                                 </div>
                                             </div>
-                                        </div>                                         
+                                        </article>                                         
                                     </li>
                                     <li class="glide__slide">
-                                        <div class="pd-specials-carouselSteps-slide">
+                                        <article class="pd-specials-carouselSteps-slide">
                                             <div class="pd-specials-carouselSteps-slide-left">
-                                                <img alt="image of software step 1" width="400" height="400" src="images/uploads/step-2.png">
+                                                <picture>
+                                                    <source srcset="/images/uploads/step-2.webp" type="image/webp">
+                                                    <img src="images/uploads/step-2.png" alt="image of software step 2" width="400" height="400" loading="lazy">
+                                                </picture>
                                             </div>
                                             <div class="pd-specials-carouselSteps-slide-right">
                                                 <div class="pd-specials-carouselSteps-right-inner">
-                                                    <h3>Step 2</h3>
-                                                    <div class="pd-specials-carouselSteps-inner-headline">
-                                                        <p><strong>Nunc nec tempus orci, vel porta eros. Vestibulum lobortis est id sagittis convallis</strong></p>
-                                                    </div>
+                                                    <header>
+                                                        <h3>Step 2</h3>
+                                                        <div class="pd-specials-carouselSteps-inner-headline">
+                                                            <p><strong>Nunc nec tempus orci, vel porta eros. Vestibulum lobortis est id sagittis convallis</strong></p>
+                                                        </div>
+                                                    </header>
                                                     <div class="pd-specials-carouselSteps-inner-para">
                                                         <p>Donec at mauris nunc. Sed imperdiet tincidunt mi, vel placerat urna efficitur non. Vestibulum ultrices magna sit amet odio interdum, sit amet semper elit commodo.</p>
                                                     </div>
@@ -86,55 +96,65 @@
                                                     </ul>
                                                 </div>
                                             </div>
-                                        </div>                                         
+                                        </article>                                         
                                     </li>
                                     <li class="glide__slide">
-                                        <div class="pd-specials-carouselSteps-slide">
+                                        <article class="pd-specials-carouselSteps-slide">
                                             <div class="pd-specials-carouselSteps-slide-left">
-                                                <img alt="image of software step 1" width="400" height="400" src="images/uploads/step-3.png">
+                                                <picture>
+                                                    <source srcset="/images/uploads/step-3.webp" type="image/webp">
+                                                    <img src="images/uploads/step-3.png" alt="image of software step 2" width="400" height="400" loading="lazy">
+                                                </picture>
                                             </div>
                                             <div class="pd-specials-carouselSteps-slide-right">
                                                 <div class="pd-specials-carouselSteps-right-inner">
-                                                    <h3>Step 3</h3>
-                                                    <div class="pd-specials-carouselSteps-inner-headline">
-                                                        <p><strong>Aliquam placerat turpis leo, quis mollis urna pharetra a. Duis euismod pellentesque dapibus</strong></p>
-                                                    </div>
+                                                    <header>
+                                                        <h3>Step 3</h3>
+                                                        <div class="pd-specials-carouselSteps-inner-headline">
+                                                            <p><strong>Aliquam placerat turpis leo, quis mollis urna pharetra a. Duis euismod pellentesque dapibus</strong></p>
+                                                        </div>
+                                                    </header>
                                                     <div class="pd-specials-carouselSteps-inner-para">
                                                         <p>Donec at mauris nunc. Sed imperdiet tincidunt mi, vel placerat urna efficitur non. Vestibulum ultrices magna sit amet odio interdum, sit amet semper elit commodo.</p>
                                                     </div>
                                                     <ul> 
-                                                        <li>Lorem ipsum dolor sit amet</li>                                                                                                                                                                           
+                                                        <li>Lorem ipsum dolor sit amet</li>                                                         
                                                         <li>Nulla volutpat aliquam velit                                                                                 
 </li>
                                                         <li>Consectetur adipiscing elit</li>                                                         
                                                     </ul>
                                                 </div>
                                             </div>
-                                        </div>                                         
+                                        </article>                                         
                                     </li>
                                     <li class="glide__slide">
-                                        <div class="pd-specials-carouselSteps-slide">
+                                        <article class="pd-specials-carouselSteps-slide">
                                             <div class="pd-specials-carouselSteps-slide-left">
-                                                <img alt="image of software step 1" width="400" height="400" src="images/uploads/step-4.png">
+                                                <picture>
+                                                    <source srcset="/images/uploads/step-4.webp" type="image/webp">
+                                                    <img src="images/uploads/step-4.png" alt="image of software step 4" width="400" height="400" loading="lazy">
+                                                </picture>
                                             </div>
                                             <div class="pd-specials-carouselSteps-slide-right">
                                                 <div class="pd-specials-carouselSteps-right-inner">
-                                                    <h3>Step 4</h3>
-                                                    <div class="pd-specials-carouselSteps-inner-headline">
-                                                        <p><strong>Nunc nec tempus orci, vel porta eros. Vestibulum lobortis est id sagittis convallis</strong></p>
-                                                    </div>
+                                                    <header>
+                                                        <h3>Step 4</h3>
+                                                        <div class="pd-specials-carouselSteps-inner-headline">
+                                                            <p><strong>Nunc nec tempus orci, vel porta eros. Vestibulum lobortis est id sagittis convallis</strong></p>
+                                                        </div>
+                                                    </header>
                                                     <div class="pd-specials-carouselSteps-inner-para">
                                                         <p>Donec at mauris nunc. Sed imperdiet tincidunt mi, vel placerat urna efficitur non. Vestibulum ultrices magna sit amet odio interdum, sit amet semper elit commodo.</p>
                                                     </div>
                                                     <ul> 
-                                                        <li>Lorem ipsum dolor sit amet</li>                                                                                                                                                                           
+                                                        <li>Lorem ipsum dolor sit amet</li>                                                         
                                                         <li>Nulla volutpat aliquam velit                                                                                 
 </li>
                                                         <li>Consectetur adipiscing elit</li>                                                         
                                                     </ul>
                                                 </div>
                                             </div>
-                                        </div>                                         
+                                        </article>                                         
                                     </li>
                                 </ul>
                             </div>
