Added new section - scissors is powered by

--- a/_factory_sections.html
+++ b/_factory_sections.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
+        <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+        <meta name="description" content=""/>
+        <meta name="author" content=""/>
         <title>Sections</title>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
-        <link href="style.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet"/>
     </head>
     <body>
         <!-- Bootstrap core JavaScript
@@ -39,8 +39,8 @@
                         <div style="position: relative;">
                             <div class="pd-section-1-image-outer">
                                 <picture>
-                                    <source srcset="/images/uploads/cards-sample-1.webp" type="image/webp">
-                                    <img src="/images/uploads/cards-sample-1.jpg" alt="image of someone using the product" width="450" height="500" loading="lazy">
+                                    <source srcset="/images/uploads/cards-sample-1.webp" type="image/webp"/>
+                                    <img src="/images/uploads/cards-sample-1.jpg" alt="image of someone using the product" width="450" height="500" loading="lazy"/>
                                 </picture>
                             </div>
                             <div class="pd-section-1-image-overlay"></div>
@@ -63,8 +63,8 @@
                         <div style="position: relative;">
                             <div class="pd-section-1-image-outer">
                                 <picture>
-                                    <source srcset="/images/uploads/cards-sample-2.webp" type="image/webp">
-                                    <img src="/images/uploads/cards-sample-2.jpg" alt="image of someone using the product" width="450" height="500" loading="lazy">
+                                    <source srcset="/images/uploads/cards-sample-2.webp" type="image/webp"/>
+                                    <img src="/images/uploads/cards-sample-2.jpg" alt="image of someone using the product" width="450" height="500" loading="lazy"/>
                                 </picture>
                             </div>
                             <div class="pd-section-1-image-overlay"></div>
@@ -95,8 +95,8 @@
                     <article class="col-md-6 order-1 order-md-2 pe-0 ps-0" style="position: relative;">
                         <div class="pd-section-2-image-outer">
                             <picture>
-                                <source srcset="/images/uploads/cards-sample-1.webp" type="image/webp">
-                                <img src="/images/uploads/cards-sample-1.jpg" alt="image of someone using the product" width="450" height="500" loading="lazy">
+                                <source srcset="/images/uploads/cards-sample-1.webp" type="image/webp"/>
+                                <img src="/images/uploads/cards-sample-1.jpg" alt="image of someone using the product" width="450" height="500" loading="lazy"/>
                             </picture>
                         </div>
                         <div class="pd-section-2-image-overlay"></div>                         
@@ -117,8 +117,8 @@
                     <article class="col-md-6 order-1 order-md-1 pe-0 ps-0" style="position: relative;">
                         <div class="pd-section-2-image-outer">
                             <picture>
-                                <source srcset="/images/uploads/cards-sample-2.webp" type="image/webp">
-                                <img src="/images/uploads/cards-sample-2.jpg" alt="image of someone using the product" width="450" height="500" loading="lazy">
+                                <source srcset="/images/uploads/cards-sample-2.webp" type="image/webp"/>
+                                <img src="/images/uploads/cards-sample-2.jpg" alt="image of someone using the product" width="450" height="500" loading="lazy"/>
                             </picture>
                         </div>
                         <div class="pd-section-2-image-overlay"></div>                         
@@ -137,8 +137,8 @@
                     <article class="col-md-4">
                         <div class="pd-section-3-image-outer">
                             <picture>
-                                <source srcset="/images/uploads/section-example-1.webp" type="image/webp">
-                                <img src="images/uploads/section-example-1.png" width="200" height="400" alt="image of app" loading="lazy">
+                                <source srcset="/images/uploads/section-example-1.webp" type="image/webp"/>
+                                <img src="images/uploads/section-example-1.png" width="200" height="400" alt="image of app" loading="lazy"/>
                             </picture>
                         </div>                         
                     </article>
@@ -167,8 +167,8 @@
                     <article class="align-items-center col-lg-4 d-flex flex-column justify-content-start order-2 order-lg-1" style="position: relative;">
                         <div class="pd-section-4-image-outer">
                             <picture>
-                                <source srcset="/images/uploads/section-example-2.webp" type="image/webp">
-                                <img src="/images/uploads/section-example-2.png" width="200" height="400" alt="image of app" loading="lazy">
+                                <source srcset="/images/uploads/section-example-2.webp" type="image/webp"/>
+                                <img src="/images/uploads/section-example-2.png" width="200" height="400" alt="image of app" loading="lazy"/>
                             </picture>
                         </div>                         
                     </article>
@@ -197,8 +197,8 @@
                     <article class="align-items-center col-lg-4 d-flex flex-column justify-content-start order-2 order-lg-1" style="position: relative;">
                         <div class="pd-section-5-image-outer">
                             <picture>
-                                <source srcset="/images/uploads/section-example-3.webp" type="image/webp">
-                                <img src="/images/uploads/section-example-3.png" width="200" height="400" alt="image of app" loading="lazy">
+                                <source srcset="/images/uploads/section-example-3.webp" type="image/webp"/>
+                                <img src="/images/uploads/section-example-3.png" width="200" height="400" alt="image of app" loading="lazy"/>
                             </picture>
                         </div>                         
                     </article>
@@ -227,8 +227,8 @@
                     <article class="align-items-center col-lg-4 d-flex flex-column justify-content-start order-2 order-lg-1" style="position: relative;">
                         <div class="pd-section-6-image-outer">
                             <picture>
-                                <source srcset="/images/uploads/section-example-3.webp" type="image/webp">
-                                <img src="/images/uploads/section-example-3.png" width="200" height="400" alt="image of app" loading="lazy">
+                                <source srcset="/images/uploads/section-example-3.webp" type="image/webp"/>
+                                <img src="/images/uploads/section-example-3.png" width="200" height="400" alt="image of app" loading="lazy"/>
                             </picture>
                         </div>                         
                     </article>
@@ -255,7 +255,7 @@
             <div class="pd-section-7-background-image-outer">
                 <picture>
                     <source srcset="/images/uploads/hero-testimonials.webp 1800w, 
-                                    /images/uploads/hero-testimonials-mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp">
+                                    /images/uploads/hero-testimonials-mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp"/>
                     <img srcset="/images/uploads/hero-testimonials.jpg 1800w,
                                 /images/uploads/hero-testimonials-mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-testimonials.jpg" loading="lazy"/>
                 </picture>
@@ -266,8 +266,8 @@
                     <article class="align-items-center col-lg-4 d-flex flex-column justify-content-start order-2 order-lg-1" style="position: relative;">
                         <div class="pd-section-7-image-outer">
                             <picture>
-                                <source srcset="/images/uploads/section-example-3.webp" type="image/webp">
-                                <img src="/images/uploads/section-example-3.png" width="200" height="400" alt="image of app" loading="lazy">
+                                <source srcset="/images/uploads/section-example-3.webp" type="image/webp"/>
+                                <img src="/images/uploads/section-example-3.png" width="200" height="400" alt="image of app" loading="lazy"/>
                             </picture>
                         </div>                         
                     </article>
@@ -310,7 +310,7 @@
                         <div class="align-items-center d-flex flex-column justify-content-start pd-section-8-image-wrapper pe-0 pe-lg-5 ps-0 ps-lg-5">
                             <picture>
                                 <source srcset="/images/uploads/scissors-infographic.webp 1920w, 
-                                                /images/uploads/scissors-infographic-mob.webp 820w" sizes="(max-width: 600px) calc(100vw - 24px), 1920px" type="image/webp">
+                                                /images/uploads/scissors-infographic-mob.webp 820w" sizes="(max-width: 600px) calc(100vw - 24px), 1920px" type="image/webp"/>
                                 <img srcset="/images/uploads/scissors-infographic.png 1920w,
                                             /images/uploads/scissors-infographic-mob.png 820w" sizes="(max-width: 600px) calc(100vw - 24px), 1920px" src="/images/uploads/scissors-infographic.png" alt="infographic of the product" loading="lazy" width="800" height="600"/>
                             </picture>
@@ -321,7 +321,7 @@
             <footer class="container pb-3 pt-5 text-end">
                 <div class="row">
                     <div class="col text-center text-md-end">
-                        <a href="#" name="anchor" class="pd-section-8-link">Learn why we made Scissors<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"></span></a> 
+                        <a href="#" name="anchor" class="pd-section-8-link">Learn why we made Scissors<span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"/></span></a> 
                     </div>
                 </div>
             </footer>
@@ -338,7 +338,7 @@
                         <div class="pd-section-9-image-wrapper">
                             <picture>
                                 <source srcset="/images/uploads/scissors-infographic.webp 1920w, 
-                                            /images/uploads/scissors-infographic-mob.webp 820w" sizes="(max-width: 600px) calc(100vw - 24px), 1920px" type="image/webp">
+                                            /images/uploads/scissors-infographic-mob.webp 820w" sizes="(max-width: 600px) calc(100vw - 24px), 1920px" type="image/webp"/>
                                 <img srcset="/images/uploads/scissors-infographic.png 1920w,
                                         /images/uploads/scissors-infographic-mob.png 820w" sizes="(max-width: 600px) calc(100vw - 24px), 1920px" src="/images/uploads/scissors-infographic.png" alt="infographic of the product" loading="lazy" width="800" height="600"/>
                             </picture>
@@ -370,7 +370,7 @@
                         <div class="pd-section-10-image-wrapper">
                             <picture>
                                 <source srcset="/images/uploads/scissors-infographic.webp 1920w, 
-                                            /images/uploads/scissors-infographic-mob.webp 820w" sizes="(max-width: 600px) calc(100vw - 24px), 1920px" type="image/webp">
+                                            /images/uploads/scissors-infographic-mob.webp 820w" sizes="(max-width: 600px) calc(100vw - 24px), 1920px" type="image/webp"/>
                                 <img srcset="/images/uploads/scissors-infographic.png 1920w,
                                         /images/uploads/scissors-infographic-mob.png 820w" sizes="(max-width: 600px) calc(100vw - 24px), 1920px" src="/images/uploads/scissors-infographic.png" alt="infographic of the product" loading="lazy" width="800" height="600"/>
                             </picture>
@@ -408,8 +408,8 @@
                     <article class="col-lg-6 col-md-5">
                         <div class="pd-section-11-image-outer">
                             <picture>
-                                <source srcset="/images/uploads/section-example-2.webp" type="image/webp">
-                                <img src="images/uploads/section-example-2.png" width="200" height="400" alt="image of app" loading="lazy">
+                                <source srcset="/images/uploads/section-example-2.webp" type="image/webp"/>
+                                <img src="images/uploads/section-example-2.png" width="200" height="400" alt="image of app" loading="lazy"/>
                             </picture>
                         </div>                         
                     </article>
@@ -437,6 +437,57 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-12</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-section-12 pt-5" style="position: relative;">
+            <div class="pd-section-12-background-image-outer">
+                <picture>
+                    <source srcset="/images/uploads/hero-people-at-work.webp 1800w, 
+                                    /images/uploads/hero-people-at-work-mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp"/>
+                    <img srcset="/images/uploads/hero-people-at-work.jpg 1800w,
+                                /images/uploads/hero-people-at-work-mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-people-at-work.jpg" loading="lazy"/>
+                </picture>
+            </div>
+            <div class="pd-section-12-image-overlay pd-section-7-image-overlay"></div>
+            <div class="container" style="position: relative; z-index: 2;">
+                <div class="row">
+                    <div class="align-items-center col-12 d-flex flex-row justify-content-end">
+                        <div class="pd-right pd-section-12-col">
+                            <h3>Scissors is powered by...</h3>
+                            <div>
+                                <ul>
+                                    <li>Magical staffing solutions</li>
+                                    <li>Valuing relationships</li>
+                                    <li>The wonderful New Zealand sun</li>
+                                    <li>Delighting clients</li>
+                                    <li>Laughing alot</li>
+                                    <li>Making stuff (and breaking stuff)</li>
+                                    <li>Celebrating together</li>
+                                </ul>
+                            </div>
+                        </div>                         
+                    </div>
+                    <div class="align-items-center col-12 d-flex flex-row">
+                        <div class="pd-left pd-section-12-col">
+                            <h3>and saying no to...</h3>
+                            <div>
+                                <ul class="pd-section-12-ul-negative">
+                                    <li>Overworking</li>
+                                    <li>Sacrificing quality for quantity</li>
+                                    <li>Losing at board games</li>
+                                    <li>Impossible deadlines</li>
+                                    <li>resisting chocolate</li>
+                                    <li>Bringing egosa to the office</li>
+                                </ul>
+                            </div>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-section-13</p>
             </div>
         </section>
         <script src="assets/js/popper.min.js"></script>
