Added grid list

--- a/_factory_sections.html
+++ b/_factory_sections.html
@@ -453,7 +453,9 @@
                 <div class="row">
                     <div class="align-items-center col-12 d-flex flex-row justify-content-end">
                         <div class="pd-right pd-section-12-col">
-                            <h3>Scissors is powered by...</h3>
+                            <header>
+                                <h3>Scissors is powered by...</h3>
+                            </header>
                             <div>
                                 <ul>
                                     <li>Magical staffing solutions</li>
@@ -469,7 +471,9 @@
                     </div>
                     <div class="align-items-center col-12 d-flex flex-row">
                         <div class="pd-left pd-section-12-col">
-                            <h3>and saying no to...</h3>
+                            <header>
+                                <h3>and saying no to...</h3>
+                            </header>
                             <div>
                                 <ul class="pd-section-12-ul-negative">
                                     <li>Overworking</li>
