--- a/_factory_mission_statements.html
+++ b/_factory_mission_statements.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Blank Template for Bootstrap</title>
+        <title>Mission Statements</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom styles for this template -->
@@ -29,7 +29,7 @@
                             <div class=" pd-mission-1-statement pt-2">
                                 <p>Donec massa dui, tincidunt eget magna in, feugiat vehicula nibh. Integer ligula nunc, facilisis faucibus magna at, bibendum volutpat erat. Aliquam eget arcu et odio pharetra vestibulum.</p>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                             <div class="pd-mission-2-statement pt-2">
                                 <p>Donec massa dui, tincidunt eget magna in, feugiat vehicula nibh. Integer ligula nunc, facilisis faucibus magna at, bibendum volutpat erat. Aliquam eget arcu et odio pharetra vestibulum.</p>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                 </div>
             </div>
@@ -69,7 +69,7 @@
                             <div class="pd-mission-3-statement">
                                 <p><strong>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</strong></p>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                             <div class="pd-mission-4-statement">
                                 <p><strong>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</strong></p>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                 </div>
             </div>
